# argon-fan

./: Cargo.toml  README.md  repository.yaml
.github/workflows/: release.yaml
argon-fan-v2/: DOCS.md  config.yaml
argon-fan-v3/: README.md  config.yaml
argon-fan-v3/translations/: en.yaml
argon-v2-fan/: Cargo.toml  Dockerfile  README.md  build.yaml  config.yaml  main.rs  translations
argon-v2-fan/src/: main.rs
argon-v3-fan/: Cargo.toml  DOCS.md  Dockerfile  build.yaml  config.yaml  main.rs
argon-v3-fan/src/: main.rs
assets/: config.toml
debian/: service
home_assistant/: Dockerfile
src/: config.rs  controller.rs  error.rs  lib.rs  main.rs
src/case/: case_variant.rs  mod.rs  v2.rs  v3.rs
