[package]
name = "argon-fan"
description = "Argon40 case fan control library"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[features]
json = ["config/json"]
toml = ["config/toml"]

[dependencies]
clap = { workspace = true }
config = { workspace = true }
rppal = { workspace = true }
serde = { workspace = true }
signal-hook = { workspace = true }
systemstat = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

[workspace]
members = [".", "argon-v2-fan", "argon-v3-fan"]

[workspace.package]
version = "1.0.0"
authors = ["Bogdan Mircea <mirceapetrebogdan@gmail.com>"]
edition = "2024"
repository = "https://github.com/bobozaur/argon-fan"
license = "MIT"

[workspace.dependencies]
# Internal
argon-fan = { path = "." }

# External
clap = { version = "4", default-features = false, features = ["color", "derive", "error-context", "help", "std", "suggestions", "usage"] }
config = { version = "0.15", default-features = false }
rppal = { version = "0.22", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
signal-hook = { version = "0.3", default-features = false }
systemstat = { version = "0.2", default-features = false }
thiserror = { version = "1", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["attributes", "std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "fmt", "env-filter", "smallvec", "std", "tracing-log"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
meta_variable_misuse = "warn"
missing_abi = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
