[package]
name = "argon-v3-fan"
description = "Argon40 V3 case fan control service"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
autobins = false

[[bin]]
name = "argon-v3-fan"
path = "main.rs"
required-features = ["toml"]

[package.metadata.deb]
maintainer-scripts = "../debian/"
systemd-units = {}
assets = [
    { source = "target/release/argon-v3-fan", dest = "/usr/bin/argon-fan", mode = "0755" },
    { source = "../assets/config.toml", dest = "/usr/share/argon-fan/config.example.toml", mode = "0644" },
    { source = "../assets/config.toml", dest = "/etc/argon-fan/config.toml", mode = "0644" }
]

[features]
default = ["toml"]
json = ["argon-fan/json"]
toml = ["argon-fan/toml"]

[dependencies]
argon-fan = { workspace = true }

[lints]
workspace = true
